--- a/index.html
+++ b/index.html
@@ -40,13 +40,15 @@
 	<script src="app\controllers\login.js"></script>
 	<script src="app\controllers\utility.js"></script>
 	<script src="app\controllers\learn.js"></script>
-	<!--     	<script src="app\controllers\finance.js"></script> -->
+	<script src="app\controllers\finance.js"></script>
 	
 	<!-- CSS part -->
 	<!-- 3rd party part -->
 	<!-- Bootstrap -->
 	<link href="app\3rdparty\bootstrap\css\bootstrap.min.css" rel="stylesheet">
 	<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">
+<!-- 	<link href="app\3rdparty\select2.min.css" rel="stylesheet"> -->
+	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
 	<link href="app\3rdparty\select.min.css" rel="stylesheet">
 	<!-- 		<link href="app\3rdparty\ui-grid.min.css" rel="stylesheet"> -->
 	<!-- Application part -->
