Prepare for multiple language supports
Change-Id: Ia95a9b4451573be491af575bb9d318c18e789f11
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
 	<script src="app\3rdparty\ui-bootstrap-tpls-0.13.0.min.js"></script>
 	<!-- Angular UI - UI Select -->
 	<script src="app\3rdparty\select.min.js"></script>
+	<!-- i18next -->
+	<script src="app\3rdparty\i18next-1.7.7.min.js"></script>
+	<!-- ng-i18next -->
+	<script src="app\3rdparty\ng-i18next.min.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\app.js"></script>
 	<script src="app\controllers\login.js"></script>
