--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 	<script src="app\3rdparty\i18next-1.7.7.min.js"></script>
 	<!-- ng-i18next -->
 	<script src="app\3rdparty\ng-i18next.min.js"></script>
+	<!-- Jstree -->
+	<script src="app\3rdparty\jstree3.1.1\jstree.min.js"></script>
+	<!-- ngJsTree -->
+	<script src="app\3rdparty\ngJsTree.min.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\app.js"></script>
 	<script src="app\controllers\login.js"></script>
