Continue working on ngJsTree
Change-Id: I9a8109b04f9a6088b3630613c5001bc816f0d540
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 	<!-- ng-i18next -->
 	<script src="app\3rdparty\ng-i18next.min.js"></script>
 	<!-- Jstree -->
-	<script src="app\3rdparty\jstree3.1.1\jstree.min.js"></script>
+	<script src="app\3rdparty\jstree3.1.1\jstree.js"></script>
 	<!-- ngJsTree -->
-	<script src="app\3rdparty\ngJsTree.min.js"></script>
+	<script src="app\3rdparty\ngJsTree.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\app.js"></script>
 	<script src="app\controllers\login.js"></script>
