Make ngJsTree work.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<!-- ng-i18next -->
 	<script src="app\3rdparty\ng-i18next.min.js"></script>
 	<!-- Jstree -->
-	<script src="app\3rdparty\jstree3.1.1\jstree.js"></script>
+	<script src="app\3rdparty\jstree3.1.1\jstree.min.js"></script>
 	<!-- ngJsTree -->
 	<script src="app\3rdparty\ngJsTree.js"></script>
 	<!-- Application part -->
