--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
 <!-- 	<link href="app\3rdparty\select2.min.css" rel="stylesheet"> -->
 	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
 	<link href="app\3rdparty\select.min.css" rel="stylesheet">
-	<!-- 		<link href="app\3rdparty\ui-grid.min.css" rel="stylesheet"> -->
+	<!--<link href="app\3rdparty\ui-grid.min.css" rel="stylesheet"> -->
+	<!--<link rel="stylesheet" href="app\3rdparty\jstree3.1.1\themes\default\style.min.css">-->
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
