--- a/index.html
+++ b/index.html
@@ -11,22 +11,19 @@
 
 	<!-- JS part -->
 	<!-- Angular JS -->
-	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular.min.js"></script>
-	<!-- 	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular-route.min.js"></script> -->
-	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular-animate.min.js"></script>
-    <!-- 	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular-messages.min.js"></script> -->
-    <!-- 	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular-resource.min.js"></script> -->
-	<script src="http://apps.bdimg.com/libs/angular.js/1.4.0-beta.4/angular-sanitize.min.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular.min.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-animate.min.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-sanitize.min.js"></script>
 	<!-- jQuery -->
-	<script src="http://apps.bdimg.com/libs/jquery/2.1.4/jquery.min.js"></script>
+	<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 	<!-- Bootstrap -->
 	<!-- <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
 	<!-- Smart-Table -->
 	<script src="app\3rdparty\smart-table.min.js"></Script>
 	<!-- Angular UI - UIRoute -->
-	<script src="app\3rdparty\angular-ui-router.min.js"></Script>
+	<script src="//cdn.bootcss.com/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<!-- Angular UI - Grid -->
-	<!-- 		<Script src="app\3rdparty\ui-grid.min.js"></Script> -->
+	<!--<Script src="app\3rdparty\ui-grid.min.js"></Script> -->
 	<!-- Tiny MCE -->
 	<script src="app\3rdparty\tinymce\tinymce.min.js"></script>
 	<!-- Angular UI - UI Tiny MCE -->
@@ -40,9 +37,11 @@
 	<!-- ng-i18next -->
 	<script src="app\3rdparty\ng-i18next.min.js"></script>
 	<!-- Jstree -->
-	<script src="app\3rdparty\jstree3.1.1\jstree.min.js"></script>
+	<script src="//cdn.bootcss.com/jstree/3.1.1/jstree.min.js"></script>
 	<!-- ngJsTree -->
 	<script src="app\3rdparty\ngJsTree.js"></script>
+	<!-- Sweet alert -->
+	<script src="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\app.js"></script>
 	<script src="app\controllers\login.js"></script>
@@ -58,8 +57,8 @@
 <!-- 	<link href="app\3rdparty\select2.min.css" rel="stylesheet"> -->
 	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
 	<link href="app\3rdparty\select.min.css" rel="stylesheet">
-	<!--<link href="app\3rdparty\ui-grid.min.css" rel="stylesheet"> -->
-	<!--<link rel="stylesheet" href="app\3rdparty\jstree3.1.1\themes\default\style.min.css">-->
+	<!-- Sweet alert -->
+	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
