--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="HIH, Version 0.4">
+	<meta name="description" content="HIH, Version 0.4.2">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub, Version 0.4</title>
+	<title>Home Info Hub, Version 0.4.2</title>
 
 	<!-- JS part -->
 	<!-- Angular JS -->
@@ -16,14 +16,10 @@
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-sanitize.min.js"></script>
 	<!-- jQuery -->
 	<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
-	<!-- Bootstrap -->
-	<!-- <script src="http://apps.bdimg.com/libs/bootstrap/3.3.4/js/bootstrap.min.js"></script> -->
-	<!-- Smart-Table -->
-	<script src="app\3rdparty\smart-table.min.js"></Script>
 	<!-- Angular UI - UIRoute -->
 	<script src="//cdn.bootcss.com/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<!-- Angular UI - Grid -->
-	<!--<Script src="app\3rdparty\ui-grid.min.js"></Script> -->
+	<script src="app\3rdparty\ui-grid3.0.1\ui-grid.min.js"></Script>
 	<!-- Tiny MCE -->
 	<script src="app\3rdparty\tinymce\tinymce.min.js"></script>
 	<!-- Angular UI - UI Tiny MCE -->
@@ -52,13 +48,12 @@
 	<!-- CSS part -->
 	<!-- 3rd party part -->
 	<!-- Bootstrap -->
-	<!--<link href="app\3rdparty\bootstrap\css\bootstrap.min.css" rel="stylesheet">
-	<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">
-	<link href="app\3rdparty\select2.min.css" rel="stylesheet"> -->
+	<!--<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">-->
 	<link ng-href="{{bootstrapcss}}" rel="stylesheet">
 	<link ng-href="{{bootstrap_defaultcss}}" rel="stylesheet">
 	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
 	<link href="app\3rdparty\select.min.css" rel="stylesheet">
+	<link  src="app\3rdparty\ui-grid3.0.1\ui-grid.min.css" rel="stylesheet">
 	<!-- Sweet alert -->
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Application part -->
