--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular.min.js"></script>
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-animate.min.js"></script>
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-sanitize.min.js"></script>
+	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-touch.min.js"></script>
 	<!-- jQuery -->
 	<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
 	<!-- Angular UI - UIRoute -->
