--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	<link ng-href="{{bootstrap_defaultcss}}" rel="stylesheet">
 	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
 	<link href="app\3rdparty\select.min.css" rel="stylesheet">
-	<link  src="app\3rdparty\ui-grid3.0.1\ui-grid.min.css" rel="stylesheet">
+	<link href="app\3rdparty\ui-grid3.0.1\ui-grid.min.css" rel="stylesheet">
 	<!-- Sweet alert -->
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Application part -->
