Change from the i18next to angular translate.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 	<!-- Angular UI - UI Select -->
 	<script src="app\3rdparty\select.min.js"></script>
 	<!-- i18next -->
-	<script src="app\3rdparty\i18next-1.7.7.min.js"></script>
+	<!--<script src="app\3rdparty\i18next-1.7.7.min.js"></script>-->
 	<!-- ng-i18next -->
-	<script src="app\3rdparty\ng-i18next.min.js"></script>
+	<!--<script src="app\3rdparty\ng-i18next.min.js"></script>-->
+	<!-- Angular translate -->
+	<script src="//cdn.bootcss.com/angular-translate/2.7.2/angular-translate.min.js"></script>
 	<!-- Jstree -->
 	<script src="//cdn.bootcss.com/jstree/3.1.1/jstree.min.js"></script>
 	<!-- ngJsTree -->
