Continue the movement.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script src="//cdn.bootcss.com/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<!-- Angular UI - Grid -->
 	<script src="app\3rdparty\ui-grid3.0.1\ui-grid.min.js"></Script>
+	<!--<script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>-->
 	<!-- Tiny MCE -->
 	<script src="app\3rdparty\tinymce\tinymce.min.js"></script>
 	<!-- Angular UI - UI Tiny MCE -->
@@ -35,6 +36,8 @@
 	<!--<script src="app\3rdparty\ng-i18next.min.js"></script>-->
 	<!-- Angular translate -->
 	<script src="//cdn.bootcss.com/angular-translate/2.7.2/angular-translate.min.js"></script>
+	<!-- Angular translate: plugins -->
+	<script src="//cdn.bootcss.com/angular-translate-loader-static-files/2.7.2/angular-translate-loader-static-files.min.js"></script>
 	<!-- Jstree -->
 	<script src="//cdn.bootcss.com/jstree/3.1.1/jstree.min.js"></script>
 	<!-- ngJsTree -->
