--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
 	<!-- Sweet alert -->
 	<script src="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.js"></script>
 	<!-- Application part -->
+	<script src="app\controllers\model.js"></script>
 	<script src="app\controllers\app.js"></script>
 	<script src="app\controllers\login.js"></script>
 	<script src="app\controllers\utility.js"></script>
