--- a/index.html
+++ b/index.html
@@ -4,12 +4,45 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="HIH, Version 0.4.2">
+	<meta name="description" content="HIH, Version 0.4.3">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub, Version 0.4.2</title>
+	<title>Home Info Hub, Version 0.4.3</title>
 
-	<!-- JS part -->
+	<!-- CSS part -->
+	<!-- 3rd party part -->
+	<!-- Bootstrap -->
+	<!--<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">-->
+	<link ng-href="{{bootstrapcss}}" rel="stylesheet">
+	<link ng-href="{{bootstrap_defaultcss}}" rel="stylesheet">
+	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
+	<link href="app\3rdparty\select.min.css" rel="stylesheet">
+	<link href="app\3rdparty\ui-grid3.0.1\ui-grid.min.css" rel="stylesheet">
+	<!-- Sweet alert -->
+	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
+	<!-- Application part -->
+	<link href="app\css\app.css" rel="stylesheet">
+	<link href="app\css\login.css" rel="stylesheet">
+	<link href="app\css\register.css" rel="stylesheet">
+</head>
+
+<body>
+	<!-- Main content area begins -->
+	<div class="container" ui-view></div>
+	<!-- Main content area ends -->
+
+	<!-- Footer area begins -->
+	<footer class="footer navbar-inverse">
+		<div class="container">
+			<p class="text-muted">
+				<div><span data-i18n="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
+				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a></div>
+			</p>
+		</div>
+	</footer>
+	<!-- Footer area ends -->
+	
+	<!-- JS loading -->
 	<!-- Angular JS -->
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular.min.js"></script>
 	<script src="//cdn.bootcss.com/angular.js/1.4.2/angular-animate.min.js"></script>
@@ -51,38 +84,5 @@
 	<script src="app\controllers\utility.js"></script>
 	<script src="app\controllers\learn.js"></script>
 	<script src="app\controllers\finance.js"></script>
-	
-	<!-- CSS part -->
-	<!-- 3rd party part -->
-	<!-- Bootstrap -->
-	<!--<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">-->
-	<link ng-href="{{bootstrapcss}}" rel="stylesheet">
-	<link ng-href="{{bootstrap_defaultcss}}" rel="stylesheet">
-	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
-	<link href="app\3rdparty\select.min.css" rel="stylesheet">
-	<link href="app\3rdparty\ui-grid3.0.1\ui-grid.min.css" rel="stylesheet">
-	<!-- Sweet alert -->
-	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
-	<!-- Application part -->
-	<link href="app\css\app.css" rel="stylesheet">
-	<link href="app\css\login.css" rel="stylesheet">
-	<link href="app\css\register.css" rel="stylesheet">
-</head>
-
-<body>
-	<!-- Main content area begins -->
-	<div class="container" ui-view></div>
-	<!-- Main content area ends -->
-
-	<!-- Footer area begins -->
-	<footer class="footer navbar-inverse">
-		<div class="container">
-			<p class="text-muted">
-				<div><span data-i18n="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
-				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a></div>
-			</p>
-		</div>
-	</footer>
-	<!-- Footer area ends -->
 </body>
 </html>
