Continues the development.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	<footer class="footer navbar-inverse">
 		<div class="container">
 			<p class="text-muted">
-				<div><span data-i18n="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
+				<div><span translate="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
 				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a></div>
 			</p>
 		</div>
