--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="HIH, Version 0.4.3">
+	<meta name="description" content="HIH, Version 0.5.0">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub, Version 0.4.3</title>
+	<title>Home Info Hub, Version 0.5.0</title>
 
 	<!-- CSS part -->
 	<!-- 3rd party part -->
@@ -20,6 +20,8 @@
 	<link href="app\3rdparty\ui-grid3.0.4\ui-grid.min.css" rel="stylesheet">
 	<!-- Sweet alert -->
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
+	<!-- Angular Chart.js -->
+	<link href="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.css" rel="stylesheet">
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
@@ -77,6 +79,10 @@
 	<script src="app\3rdparty\ngJsTree.js"></script>
 	<!-- Sweet alert -->
 	<script src="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.js"></script>
+	<!-- Chart.js -->
+	<script src="//cdn.bootcss.com/Chart.js/2.0.0-alpha3/Chart.min.js"></script>
+	<!-- Angular Chart.js -->
+	<script src="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\model.js"></script>
 	<script src="app\controllers\app.js"></script>
