Continues the development.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Angular Chart.js -->
 	<link href="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.css" rel="stylesheet">
+	<!-- Selectize.js -->
+	<script src="app\3rdparty\selectize.js0.12.1/css/selectize.bootstrap3.css"></script>
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
@@ -83,6 +85,10 @@
 	<script src="//cdn.bootcss.com/Chart.js/2.0.0-alpha3/Chart.min.js"></script>
 	<!-- Angular Chart.js -->
 	<script src="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.js"></script>
+	<!-- Selectize.js -->
+	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
+	<!-- Angular-Selectize.js -->
+	<script src="app\3rdparty\angular-selectize.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\model.js"></script>
 	<script src="app\controllers\app.js"></script>
