Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	<!-- Angular Chart.js -->
 	<script src="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.js"></script>
 	<!-- Selectize.js -->
-	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
+	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.js"></script>
 	<!-- Angular-Selectize.js -->
 	<script src="app\3rdparty\angular-selectize.js"></script>
 	<!-- Application part -->
