Continues the development.
Signed-off-by: Alva Chien <alvachien@163.com>

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	<!-- Angular Chart.js -->
 	<link href="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.css" rel="stylesheet">
 	<!-- Selectize.js -->
-	<script src="app\3rdparty\selectize.js0.12.1/css/selectize.bootstrap3.css"></script>
+	<link src="app\3rdparty\selectize.js0.12.1\css\selectize.default.css" rel="stylesheet">
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
@@ -86,7 +86,7 @@
 	<!-- Angular Chart.js -->
 	<script src="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.js"></script>
 	<!-- Selectize.js -->
-	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.js"></script>
+	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
 	<!-- Angular-Selectize.js -->
 	<script src="app\3rdparty\angular-selectize.js"></script>
 	<!-- Application part -->
