Continues the development.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 	<!-- Angular Chart.js -->
 	<link href="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.css" rel="stylesheet">
 	<!-- Selectize.js -->
-	<link src="app\3rdparty\selectize.js0.12.1\css\selectize.default.css" rel="stylesheet">
+	<!--<link href="app\3rdparty\selectize.js0.12.1\css\selectize.css" rel="stylesheet">-->
+	<link href="app\3rdparty\selectize.js0.12.1\css\selectize.bootstrap3.css" rel="stylesheet">
 	<!-- Application part -->
 	<link href="app\css\app.css" rel="stylesheet">
 	<link href="app\css\login.css" rel="stylesheet">
