Continues the development. 2015.10.03

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	<!-- Sweet alert -->
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Angular Chart.js -->
-	<link href="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.css" rel="stylesheet">
+	<link href="//cdn.bootcss.com/angular-chart.js/0.8.4/angular-chart.min.css" rel="stylesheet">
 	<!-- Selectize.js -->
 	<!--<link href="app\3rdparty\selectize.js0.12.1\css\selectize.css" rel="stylesheet">-->
 	<link href="app\3rdparty\selectize.js0.12.1\css\selectize.bootstrap3.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 	<footer class="footer navbar-inverse">
 		<div class="container">
 			<p class="text-muted">
-				<div><span translate="Common.Copyright">Copyright</span> © 2014 - 2015 Alva Chien</div>
+				<div><span translate="Common.Copyright">Copyright</span> © 2014 - 2016 Alva Chien</div>
 				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a></div>
 			</p>
 		</div>
@@ -83,9 +83,10 @@
 	<!-- Sweet alert -->
 	<script src="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.js"></script>
 	<!-- Chart.js -->
-	<script src="//cdn.bootcss.com/Chart.js/2.0.0-alpha3/Chart.min.js"></script>
+	<!--<script src="//cdn.bootcss.com/Chart.js/2.0.0-alpha3/Chart.min.js"></script>-->
+	<script src="//cdn.bootcss.com/Chart.js/1.0.2/Chart.min.js"></script>
 	<!-- Angular Chart.js -->
-	<script src="//cdn.bootcss.com/angular-chart.js/0.8.3/angular-chart.min.js"></script>
+	<script src="//cdn.bootcss.com/angular-chart.js/0.8.4/angular-chart.min.js"></script>
 	<!-- Selectize.js -->
 	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
 	<!-- Angular-Selectize.js -->
