Continues the development.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,8 @@
 	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
 	<!-- Angular-Selectize.js -->
 	<script src="app\3rdparty\angular-selectize.js"></script>
+	<!-- Smart table -->
+	<script src="app\3rdparty\smart-table.min.js"></script>
 	<!-- Application part -->
 	<script src="app\controllers\model.js"></script>
 	<script src="app\controllers\app.js"></script>
