--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="HIH, Version 0.5.0">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub, Version 0.5.0</title>
+	<title>Home Info Hub, Version 0.5.3</title>
 
 	<!-- CSS part -->
 	<!-- 3rd party part -->
@@ -15,10 +15,10 @@
 	<!--<link href="app\3rdparty\bootstrap\css\bootstrap-theme.min.css" rel="stylesheet">-->
 	<link ng-href="{{bootstrapcss}}" rel="stylesheet">
 	<link ng-href="{{bootstrap_defaultcss}}" rel="stylesheet">
-	<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> 
-	<link href="app\3rdparty\select.min.css" rel="stylesheet">
+	<!--<link href="app\3rdparty\select2.3.4.5.css" rel="stylesheet"> -->
+	<!--<link href="app\3rdparty\select.min.css" rel="stylesheet">-->
 	<!--<link href="app\3rdparty\ui-grid3.0.4\ui-grid.min.css" rel="stylesheet">-->
-	<link href="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.css" rel="stylesheet">
+	<!--<link href="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.css" rel="stylesheet">-->
 	<!-- Sweet alert -->
 	<link href="//cdn.bootcss.com/sweetalert/1.0.1/sweetalert.min.css" rel="stylesheet">
 	<!-- Angular Chart.js -->
@@ -34,7 +34,7 @@
 
 <body>
 	<!-- Main content area begins -->
-	<div class="container" ui-view></div>
+	<div class="container-fluid" ui-view></div>
 	<!-- Main content area ends -->
 
 	<!-- Footer area begins -->
@@ -59,9 +59,7 @@
 	<!-- Angular UI - UIRoute -->
 	<script src="//cdn.bootcss.com/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
 	<!-- Angular UI - Grid -->
-	<script src="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.js"></script>
-	<!--<script src="app\3rdparty\ui-grid3.0.4\ui-grid.min.js"></Script>-->
-	<!--<script src="http://ui-grid.info/release/ui-grid-unstable.js"></script>-->
+	<!--<script src="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.js"></script>-->
 	<!-- Tiny MCE -->
 	<script src="app\3rdparty\tinymce\tinymce.min.js"></script>
 	<!-- Angular UI - UI Tiny MCE -->
@@ -69,7 +67,7 @@
 	<!-- Angular UI - UI bootstrap -->
 	<script src="app\3rdparty\ui-bootstrap-tpls-0.13.0.min.js"></script>
 	<!-- Angular UI - UI Select -->
-	<script src="app\3rdparty\select.min.js"></script>
+	<!--<script src="app\3rdparty\select.min.js"></script>-->
 	<!-- i18next -->
 	<!--<script src="app\3rdparty\i18next-1.7.7.min.js"></script>-->
 	<!-- ng-i18next -->
