Continues the development.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 	<!-- Angular UI - Grid -->
 	<!--<script src="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.js"></script>-->
 	<!-- Tiny MCE -->
-	<script src="app\3rdparty\tinymce\tinymce.min.js"></script>
+	<!--<script src="app\3rdparty\tinymce\tinymce.min.js"></script>-->
+	<script src="//cdn.bootcss.com/tinymce/4.2.7/tinymce.min.js"></script>
 	<!-- Angular UI - UI Tiny MCE -->
 	<script src="app\3rdparty\ui.tinymce.js"></script>
 	<!-- Angular UI - UI bootstrap -->
