Continues the development.

--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
 	
 	<!-- JS loading -->
 	<!-- Angular JS -->
-	<script src="//cdn.bootcss.com/angular.js/1.4.6/angular.min.js"></script>
-	<script src="//cdn.bootcss.com/angular.js/1.4.6/angular-animate.min.js"></script>
-	<script src="//cdn.bootcss.com/angular.js/1.4.6/angular-sanitize.min.js"></script>
-	<script src="//cdn.bootcss.com/angular.js/1.4.6/angular-touch.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.7\angular.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.7\angular-animate.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.7\angular-sanitize.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.7\angular-touch.min.js"></script>
 	<!-- jQuery -->
-	<script src="//cdn.bootcss.com/jquery/2.1.4/jquery.min.js"></script>
+	<script src="app\3rdparty\jquery.min.js"></script>
 	<!-- Angular UI - UIRoute -->
-	<script src="//cdn.bootcss.com/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
+	<script src="app\3rdparty\angular-ui-router.min.js"></script>
 	<!-- Angular UI - Grid -->
 	<!--<script src="//cdn.bootcss.com/angular-ui-grid/3.0.7/ui-grid.min.js"></script>-->
 	<!-- Tiny MCE -->
