Continues the development.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="HIH, Version 0.5.3">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub, V0.5.4, by Alva Chien</title>
+	<title>Home Info Hub V0.5.4, by Alva Chien</title>
 
 	<!-- CSS part -->
 	<!-- 3rd party part -->
