Continues the development.

--- a/index.html
+++ b/index.html
@@ -97,5 +97,6 @@
 	<script src="app\controllers\utility.js"></script>
 	<script src="app\controllers\learn.js"></script>
 	<script src="app\controllers\finance.js"></script>
+    <script src="app\controllers\lib.js"></script>
 </body>
 </html>
