Continues the development.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="HIH, Version 0.5.3">
+	<meta name="description" content="Home Info. Hub, Version 0.5.4">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info Hub V0.5.4, by Alva Chien</title>
+	<title>Home Info. Hub V0.5.4, by Alva Chien</title>
 
 	<!-- CSS part -->
 	<!-- 3rd party part -->
