Continues the development, 2015.12.31, part III.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<div class="container">
 			<p class="text-muted">
 				<div><span translate="Common.Copyright">Copyright</span> © 2014 - 2016 Alva Chien</div>
-				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a></div>
+				<div>An open source project on GitHub: <a target="_blank" href="https://github.com/alvachien/hih">HIH</a> | Report an issue <a target="_blank" href="https://github.com/alvachien/hih/issues/new">Click</a> </div>                
 			</p>
 		</div>
 	</footer>
