Continues the development, 2016.1.25, part III.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
 	
 	<!-- JS loading -->
 	<!-- Angular JS -->
-	<script src="app\3rdparty\angular.js1.4.7\angular.min.js"></script>
-	<script src="app\3rdparty\angular.js1.4.7\angular-animate.min.js"></script>
-	<script src="app\3rdparty\angular.js1.4.7\angular-sanitize.min.js"></script>
-	<script src="app\3rdparty\angular.js1.4.7\angular-touch.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.9\angular.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.9\angular-animate.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.9\angular-sanitize.min.js"></script>
+	<script src="app\3rdparty\angular.js1.4.9\angular-touch.min.js"></script>
 	<!-- jQuery -->
 	<script src="app\3rdparty\jquery.min.js"></script>
 	<!-- Angular UI - UIRoute -->
@@ -63,7 +63,7 @@
 	<!-- Angular translate: plugins -->
 	<script src="app\3rdparty\angular-translate-loader-static-files.min.js"></script>
 	<!-- Jstree -->
-	<script src="app\3rdparty\jstree-3.2.1/jstree.min.js"></script>
+	<script src="app\3rdparty\jstree-3.2.1\jstree.min.js"></script>
 	<!-- ngJsTree -->
 	<script src="app\3rdparty\ngJsTree.min.js"></script>
 	<!-- Sweet alert -->
@@ -74,7 +74,7 @@
 	<!-- Angular Chart.js -->
 	<script src="app\3rdparty\angular-chart.min.js"></script>
 	<!-- Selectize.js -->
-	<script src="app\3rdparty\selectize.js0.12.1/js/selectize.min.js"></script>
+	<script src="app\3rdparty\selectize.js0.12.1\js\selectize.min.js"></script>
 	<!-- Angular-Selectize.js -->
 	<script src="app\3rdparty\angular-selectize.js"></script>
 	<!-- Smart table -->
