Continues the development, 2016.1.28, part I.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 
 <body>
+    
 	<!-- Main content area begins -->
 	<div class="container-fluid" ui-view></div>
 	<!-- Main content area ends -->
@@ -57,7 +58,7 @@
 	<!-- Angular UI - UI Tiny MCE -->
 	<script src="app\3rdparty\ui.tinymce.js"></script>
 	<!-- Angular UI - UI bootstrap -->
-	<script src="app\3rdparty\ui-bootstrap-tpls-1.1.0.min.js"></script>
+	<script src="app\3rdparty\ui-bootstrap-tpls-1.1.1.js"></script>
 	<!-- Angular translate -->
 	<script src="app\3rdparty\angular-translate.min.js"></script>
 	<!-- Angular translate: plugins -->
