Update several 3rd party libraries

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Home Info. Hub, Version 0.5.5">
+	<meta name="description" content="Home Info. Hub, Version 0.5.6">
 	<meta name="author" content="Alva Chien">
 	
-	<title>Home Info. Hub V0.5.5, by Alva Chien</title>
+	<title>Home Info. Hub V0.5.6, by Alva Chien</title>
 
 	<!-- CSS part -->
 	<!-- 3rd party part -->
@@ -63,9 +63,9 @@
 	<!-- Angular translate: plugins -->
 	<script src="app\3rdparty\angular-translate-loader-static-files.min.js"></script>
 	<!-- Jstree -->
-	<script src="app\3rdparty\jstree-3.2.1\jstree.min.js"></script>
+	<script src="app\3rdparty\jstree\jstree.min.js"></script>
 	<!-- ngJsTree -->
-	<script src="app\3rdparty\ngJsTree.js"></script>
+	<script src="app\3rdparty\ngJsTree.min.js"></script>
 	<!-- Sweet alert -->
 	<script src="app\3rdparty\sweetalert.min.js"></script>
 	<!-- Chart.js -->
