Change to ngJStree

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<!-- Jstree -->
 	<script src="app\3rdparty\jstree\jstree.min.js"></script>
 	<!-- ngJsTree -->
-	<script src="app\3rdparty\ngJsTree.min.js"></script>
+	<script src="app\3rdparty\ngJsTree.js"></script>
 	<!-- Sweet alert -->
 	<script src="app\3rdparty\sweetalert.min.js"></script>
 	<!-- Chart.js -->
